# pyproject.toml
[project]
name = "ComfyUI_Flash-Attention_v100"
description = "A ComfyUI custom node enabling Flash Attention on legacy NVIDIA GPUs (Tesla V100, T4) that lack Compute Capability 8.0+ required by FlashAttention-2."
version = "1.0.0"
license = { file = "LICENSE.txt" }
dependencies = []
[project.urls]
Repository = "https://github.com/NetVoobrazhenia/ComfyUI_Flash-Attention_v100"
[tool.comfy]
PublisherId = "netvoobrazhenia"
DisplayName = "ComfyUI Flash Attention V100"
Icon = "https://raw.githubusercontent.com/NetVoobrazhenia/ComfyUI_Flash-Attention_v100/refs/heads/main/icon.png"